<resources>
    <string name="app_name">InClass08</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_exp">Current Expenses:</string>
    <string name="no_exp_label">There is no expense to show. Please add your expenses from the menu.</string>
    <string name="add_exp_label">Add An Expense</string>
    <string name="exp_name_label">Expense Name</string>
    <string name="amount_label">Amount</string>
    <string name="add_button">Add Expense</string>
    <string name="cancel_button">Cancel</string>
    <string name="category_label">Category</string>
    <string name="show_name">Name</string>
    <string name="show_category_label">Category</string>
    <string name="show_amount_label">Amount</string>
    <string name="show_date_label">Date</string>
    <string name="button_close_label">Close</string>
    <string-array name="categories">
        <item>Groceries</item>
        <item>Invoice</item>
        <item>Transportation</item>
        <item>Shopping</item>
        <item>Rent</item>
        <item>Trips</item>
        <item>Utilities</item>
        <item>Other</item>
    </string-array>
</resources>
